# salama-pos

./: .gitignore  .gitmodules  CMakeLists.txt  qml.qrc  salama-pos.pro
backend/: CMakeLists.txt
backend/src/: api_endpoints.cpp  api_endpoints.h  main.cpp
cpp/: backendmanager.cpp  backendmanager.h  databaseinterface.cpp  databaseinterface.h  logger.cpp  logger.h  main.cpp  pingserverprocess.cpp  qmlinterface.cpp  qmlinterface.h  version.h.in  webapiinterface.cpp
cpp/models/: completermodel.cpp  crediteeaccountsmodel.cpp  productsalesmodel.cpp  productsalesmodel.h  saleitemsmodel.cpp  stockitemsmodel.cpp  toastmodel.cpp  toastmodel.h  useraccountsmodel.cpp  useraccountsmodel.h
cpp/models/src/: stockitems.h  toast.cpp  toast.h
deploy/: CQtDeployer.json  deploy.sh
docker/: docker-compose.yaml
json/: config.json
qml/: Theme.qml  main.qml
qml/components/: AppButton.qml  AppCombo.qml  AppText.qml  AppTextInput.qml  DashboardGraphWidget.qml  LoginInputField.qml  MessageBox.qml  StockQtyInputBox.qml
qml/delegates/: AlarmsWidgetDelegate.qml  ToastDelegate.qml
qml/logic/: Backup.qml  Logic.qml
qml/subviews/: AccountsPopup.qml  AddItemToCheckoutDialog.qml  AddRemoveStockPopup.qml  AdminSalesWindow.qml  AlarmsPopup.qml  CalendarPopup.qml  CheckoutPopup.qml  CheckoutQtyEditPopup.qml  CreditRepaymentPopup.qml  CrediteeUserView.qml  LoginPopup.qml  NewCrediteePopup.qml  NewItemPopup.qml  PasswordResetPopup.qml  SalesSummaryDialog.qml  SearchAndSelectItemPopup.qml  SelectCrediteeOnSale.qml  StockHistoryWindow.qml  StockItemStockView.qml  StockProductView.qml  ToastPopup.qml  UndoSalesPopup.qml  UserAccountPopup.qml
qml/views/: AccountsView.qml  DashboardView.qml  LoginView.qml  MainAppView.qml  SalesView.qml  SettingsView.qml  SplashView.qml  StockView.qml
